--- a/videoCropView/build.gradle
+++ b/videoCropView/build.gradle
@@ -1,8 +1,20 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
+
+publish {
+    userOrg = 'mabi87'
+    groupId = 'com.crust87'
+    artifactId = 'video-crop-view'
+    publishVersion = '1.0.0'
+    desc = 'Video Crop View for Android'
+    website = 'https://github.com/mabi87/Android-VideoCropView'
+    issueTracker = "${website}/issues"
+    repository = "${website}.git"
+}
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion '23.0.2'
 
     defaultConfig {
         minSdkVersion 14
@@ -19,6 +31,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:23.1.1'
 }
